# prim

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LANGUAGE_SPEC.md  README.md  RUNTIME_ABI.md  build.sh  commit_message.txt  flake.nix  run_commiter.sh  run_designer.sh  run_implementer.sh  run_judge.sh  test_boolean_tokenization.prim
.agents/: commiter.md  designer.md  (+2 more)
prim-cli/: Cargo.toml  TEST_SUITE.md  build.rs
prim-cli/src/: error.rs  lib.rs  main.rs
prim-cli/test_programs/: alloc_basic.expected  alloc_basic.prim  arithmetic  arithmetic.prim  assoc_called_as_method_error.expected  assoc_called_as_method_error.prim  associated_functions.expected  associated_functions.prim  basic_hello.prim  bitwise_ops.expected  bitwise_ops.prim  block_expressions.expected  block_expressions.prim  boolean_arithmetic_error.expected  boolean_arithmetic_error.prim  boolean_literals.expected  boolean_literals.prim  byte_array_literal.prim  chained_calls.expected  chained_calls.prim  comments.prim  convert_matrix.expected  convert_matrix.prim  cross_module_field.prim  dbg_basic.expected  dbg_basic.prim  debug_boolean.prim  dereference_basic  dereference_basic.prim  dyn_dispatch_basic.prim  dyn_dispatch_duplicate_impl_error.prim  dyn_dispatch_missing_impl_error.prim  dyn_dispatch_multi_method.prim  dyn_dispatch_polymorphic.prim  dyn_dispatch_unknown_method_error.prim  dyn_dispatch_with_args.expected  dyn_dispatch_with_args.prim  dyn_field_coercion.prim  dyn_friendly_error_names.expected  dyn_friendly_error_names.prim  (+162 more)
prim-cli/test_programs/dir_hello/: main.prim
prim-cli/test_programs/dir_import_cycle/: expected.txt
prim-cli/test_programs/dir_import_cycle/a/: lib.prim
prim-cli/test_programs/dir_import_cycle/b/: lib.prim
prim-cli/test_programs/dir_import_cycle/cmd/: main.prim
prim-cli/test_programs/dir_multi/: main.prim
prim-cli/test_programs/dir_multi/utils/: helper.prim
prim-cli/tests/: common.rs  integration_tests.rs  test_programs.rs
prim-cli/tests/data/: boolean_simple  boolean_simple.prim  complex.prim  example.prim  mult_only.prim  mult_test.prim  test_boolean_both  test_boolean_both.prim
prim-codegen-old/: Cargo.toml
prim-codegen-old/src/: error.rs  lib.rs
(+66 files in other folders)
