[package]
name = "prim"
version = "0.1.0"
edition = "2024"

[lib]
name = "prim"
path = "src/lib.rs"

[[bin]]
name = "prim"
path = "src/main.rs"

[dependencies]
prim-tok = { path = "../prim-tok" }
prim-parse = { path = "../prim-parse" }
prim-wasm = { path = "../prim-wasm" }
prim-compiler = { path = "../prim-compiler" }
tempfile = "3.8"
indexmap = "2.2"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
