[package]
name = "prim-codegen-old"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
prim-compiler = { path = "../prim-compiler" }
prim-parse = { path = "../prim-parse" }
cranelift = "0.122"
cranelift-module = "0.122"
cranelift-object = "0.122"
cranelift-jit = "0.122"
cranelift-native = "0.122"

[dev-dependencies]
tempfile = "3.8"
